replaced copyright by copyleft

--- a/public/index.html
+++ b/public/index.html
@@ -423,7 +423,7 @@
                 </div>
                 <div class="row">
                     <p>
-                        Copyright &copy; 2019 by Omnifood. All rights reserved.
+                        Copyleft &#127279; 2021 by Omnifood.
                     </p>
                 </div>
             </div>
